--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <a href="https://dice-roll-nea.azurewebsites.net/dice-roller.html">Dice Roller</a>
         
         
-        <a href="https://hello-world-map-nea.azurewebsites.net">Hello World Map</a>        
+        <a href="https://hello-world-map-nea.azurewebsites.net/hello-world-map-nea.html">Hello World Map</a>        
 
 
         <a href="https://map-mania-nea.azurewebsites.net/map-mania.html">Map Mania V1 which is also my demo code</a>
