--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <a href="https://mustang-v1-nea.azurewebsites.net/mustang-v1.html">mustang v1</a>
         
         <a href="https://mustang-v2-nea.azurewebsites.net/">mustang v2</a>
+        
+        <a href="https://mustang-v3-nea.azurewebsites.net/mustang-v3-nea.html">mustang v3</a>
+
 
 
 
