--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         <a href="https://mustang-v2-nea.azurewebsites.net/">mustang v2</a>
         
         <a href="https://mustang-v3-nea.azurewebsites.net/mustang-v3-nea.html">mustang v3</a>
-
+        
+        <a href="https://final-project-nate-fernando.azurewebsites.net">mustang v3</a>
 
 
 
