--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         
         <a href="https://mustang-v3-nea.azurewebsites.net/mustang-v3-nea.html">mustang v3</a>
         
-        <a href="https://final-project-nate-fernando.azurewebsites.net">mustang v3</a>
+        <a href="https://final-project-nate-fernando.azurewebsites.net">FINAL PROJECT</a>
 
 
 
